--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
 body {
   font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
+  margin: 50px;
+  padding-top: 56px;
   background-color: #f4f4f4;
+  
 }
 
 .country-list,
@@ -63,3 +64,16 @@ img {
   border-radius: 5px;
 }
 
+.flag-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 150px; /* Ensure equal height for flags */
+}
+
+/* Ensuring flags have the same size */
+.flag-size {
+  width: 200px; /* Set to desired width */
+  height: 130px; /* Set to desired height */
+  object-fit: contain; /* Ensure flags fit within the box, maintaining aspect ratio */
+}
